# softnavigation

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: exceptions.py  utils.py
src/algorithms/: discrete_rrt.py  kd_tree.py
src/tests/: test_discrete_rrt.py  test_kd_tree.py
